2007-07-27  Dustin J. Mitchell <dustin@cs.uchicago.edu>
	* extensions/base/new configure.ac: use mkdir -p to create the
	  tasks directory

2007-07-25  Dustin J. Mitchell <dustin@cs.uchicago.edu>
	* autogen: make it a real shell script

2007-07-05  Dustin J. Mitchell <dustin@cs.uchicago.edu>
	* config/install-sh: set executable flag

2007-07-02  Dustin J. Mitchell <dustin@cs.uchicago.edu>
	* extensions/quilt/require.sh: support users setting QUILT_PATCHES

2007-06-27  Dustin J. Mitchell <dustin@cs.uchicago.edu>
	* extensions/cvs/require.sh extensions/quilt/require.sh: misc
	  bugfixes
	* extensions/base/var extensions/base/Makefile.am: new
	  subcommand to show interesting variables
	* framework/dev_functions.sh: use $DEV_TASK vs. $TASK 
	  and $DEV_TASK_CONFIG_DIR vs.  $TASK_CONFIG_DIR
	* fix 'load' and 'unload' to work on arbitrary directories
	* framework/dev.in: source defaults *after* project and task have
	  been discovered