@@ -1,3 +1,7 @@
+2007-10-28  Dustin J. Mitchell <dustin@cs.uchicago.edu>
+	* extensions/base/new configure.ac config/dev_compat_prog_path.m4:
+	  Check that 'mkdir' supports -p, and use it instead of $MKDIR_P
+
 2007-07-27  Dustin J. Mitchell <dustin@cs.uchicago.edu>
 	* extensions/base/new configure.ac: use mkdir -p to create the
 	  tasks directory
